--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,52 @@
-body {
-  padding: 50px;
+
+body{
+  margin: 0px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #333;
 }
 
-a {
-  color: #00B7FF;
+a, a:hover, a:visited, a:active, a:link {
+  color:#333;
+  text-decoration: none;
+}
+header{
+  width: 100%;
+  background-color: #444;
+  padding: 20px;
+  padding-left: 50px; 
+}
+h1,h3{
+  color: #fff;
+}
+
+.itemrow{
+  background-color: #fff;
+  border-bottom: 1px solid #ccc;
+  color: #333;
+  font-size: 13pt;
+}
+
+.author{
+  color: #999;
+   display: inline-block;
+}
+
+.itemrow:hover{
+  background-color: #fafafa
+}
+
+.delete{
+  font-size: 14pt;
+   vertical-align: middle;
+   display: none;
+  }
+.delete:hover{
+  color:red;
+  cursor: pointer;
+}
+
+.itemcol{
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
